--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
   <title>Document</title>
 </head>
 <body>
+
+  <!-- header con fixed  -->
   
+<header>
+
+  <nav>
+
+  </nav>
+</header>
+
+<main>
+  <!-- primo blocco  viupurt-->
+  <div class="red">
+
+  </div>
+
+  <!-- secondo blocco viupurt  -->
+
+  <div class="green">
+
+  </div>
+
+  <!-- terzo blocco viupurt  -->
+  <div class="yellow">
+
+  </div>
+    
+</main>
+
 </body>
 </html>
