--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -15,23 +16,29 @@
 <header>
 
   <nav>
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ul>
 
   </nav>
 </header>
 
 <main>
-  <!-- primo blocco  viupurt-->
+  
   <div class="red">
+
 
   </div>
 
-  <!-- secondo blocco viupurt  -->
+
 
   <div class="green">
 
   </div>
 
-  <!-- terzo blocco viupurt  -->
+ 
   <div class="yellow">
 
   </div>
