--- a/index.html
+++ b/index.html
@@ -14,33 +14,42 @@
 <body>
 
   <div class="conteiner">
+
+    <!-- header  -->
     <header>
 
       <nav>
         <ul>
-          <li class="square">1</li>
-          <li class="square">2</li>
-          <li class="square">3</li>
+          <li class="square shadow"> <strong>1</strong></li>
+          <li class="square"><strong>2</strong></li>
+          <li class="square"><strong>3</strong></li>
         </ul>
   
       </nav>
     </header>
-  
+
+    <!-- main -->
     <main>
+
+      <!-- vioport 1  -->
+
   
-      <div class="red">
+      <div id="adids" class="box">
   
   
       </div>
+
+      <!-- vioport 2  -->
   
   
   
-      <div class="green">
+      <div id="tommy" class="box">
   
       </div>
+
+      <!-- vioport 3 -->
   
-  
-      <div class="yellow">
+      <div id="all-star" class="box">
   
       </div>
   
