--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
       <!-- vioport 1  -->
 
   
-      <div id="adids" class="box">
+      <div id="adidas" class="box box-red">
+        <div class="layover">
+          <h1>Il nostro modello di punta</h1>
+          
+        </div>
+       
   
   
       </div>
@@ -43,13 +48,17 @@
   
   
   
-      <div id="tommy" class="box">
+      <div id="tommy" class="box box-green">
+        <div class="layover">
+          <h1>Il nostro modello di punta</h1>
   
       </div>
 
       <!-- vioport 3 -->
   
-      <div id="all-star" class="box">
+      <div id="all-star" class="box box-yellow">
+        <div class="layover">
+          <h1>Il nostro modello di punta</h1>
   
       </div>
   
