--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   
       <div id="all-star" class="box box-yellow">
         <div class="layover">
-          <h1>Il nostro modello di punta</h1>
+          <h1 class="color">Il nostro modello di punta</h1>
   
       </div>
   
