--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
       <div id="adidas" class="box box-red">
         <div class="layover">
-          <h1>Il nostro modello di punta</h1>
+          <h1>Il nostro modello <br> di punta</h1>
           
         </div>
        
@@ -50,7 +50,7 @@
   
       <div id="tommy" class="box box-green">
         <div class="layover">
-          <h1>Il nostro modello di punta</h1>
+          <h1>Il nostro modello <br> di punta</h1>
   
       </div>
 
@@ -58,7 +58,7 @@
   
       <div id="all-star" class="box box-yellow">
         <div class="layover">
-          <h1 class="color">Il nostro modello di punta</h1>
+          <h1 class="color">Il nostro modello <br> di punta</h1>
   
       </div>
   
