--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <div id="adidas" class="box box-red">
         <div class="layover">
           <h1>Il nostro modello <br> di punta</h1>
+          <img src="img/01.png" alt="">
           
         </div>
        
