esercizio finito ma incompleto di ombra

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <div id="tommy" class="box box-green">
         <div class="layover">
           <h1>Il nostro modello <br> di punta</h1>
+          <img src="img/02.png" alt="">
   
       </div>
 
@@ -60,6 +61,7 @@
       <div id="all-star" class="box box-yellow">
         <div class="layover">
           <h1 class="color">Il nostro modello <br> di punta</h1>
+          <img src="img/03.png" alt="">
   
       </div>
   
