--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
       <nav>
         <ul>
-          <li class="square shadow"> <strong>1</strong></li>
-          <li class="square"><strong>2</strong></li>
-          <li class="square"><strong>3</strong></li>
+          <li class="square"> <a href="#adidas">1</a> </li>
+          <li class="square"> <a href="#tommy">2</a> </li>
+          <li class="square"> <a href="#all-star">3</a> </li>
         </ul>
   
       </nav>
